force-app/main/default/objects/BigMachines__Commerce_Settings__c/BigMachines__Commerce_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Oracle CPQ Cloud Commerce Settings</label>
</CustomObject>