force-app/main/default/objects/BigMachines__Commerce_Settings__c/fields/BigMachines__Administrator_Email__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Administrator_Email__c</fullName>
    <description>Error messages will be sent to this email address to help troubleshoot issues with the integration.</description>
    <label>Administrator Email</label>
    <type>Email</type>
</CustomField>