force-app/main/default/objects/BigMachines__Commerce_Settings__c/fields/BigMachines__Display_Page_Header__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Display_Page_Header__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this box is checked, the Oracle CPQ Cloud header will be displayed at the top of the page when creating and editing Oracle CPQ Cloud quotes.</description>
    <inlineHelpText>If this box is checked, the Oracle CPQ Cloud header will be displayed at the top of the page when creating and editing Oracle CPQ Cloud quotes.</inlineHelpText>
    <label>Display Page Header</label>
    <type>Checkbox</type>
</CustomField>