force-app/main/default/objects/BigMachines__Commerce_Settings__c/fields/BigMachines__First_Quote_Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__First_Quote_Is_Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this box is checked, the first quote on an opportunity is automatically set to be the primary quote for that opportunity.</description>
    <inlineHelpText>If this box is checked, the first quote on an opportunity is automatically set to be the primary quote for that opportunity.</inlineHelpText>
    <label>First Quote Is Primary</label>
    <type>Checkbox</type>
</CustomField>