force-app/main/default/objects/BigMachines__Commerce_Settings__c/fields/BigMachines__Preserve_Ad_Hoc_Products__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Preserve_Ad_Hoc_Products__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this box is checked, any products that have been added directly to the opportunity will not be removed when syncing a quote.  If this box is unchecked, the products on the opportunity will always be an exact match of the products on the primary quote.</description>
    <inlineHelpText>If this box is checked, any products that have been added directly to the opportunity will not be removed when syncing a quote.  If this box is unchecked, the products on the opportunity will always be an exact match of the products on the primary quote.</inlineHelpText>
    <label>Preserve Ad Hoc Products</label>
    <type>Checkbox</type>
</CustomField>