force-app/main/default/objects/BigMachines__Commerce_Settings__c/fields/BigMachines__Use_Opportunity_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Use_Opportunity_Pricebook__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This option is provided to support legacy integrations.  New implementations should check this box.  If this box is checked, the integration package will send the ID of the opportunity pricebook to Oracle CPQ Cloud when creating new quotes.  If this box is checked and the Oracle CPQ Cloud pricebooks do not have the correct partner pricebook ID values, you will get an error when creating new quotes.</description>
    <inlineHelpText>If this box is checked, the integration package will send the ID of the opportunity pricebook to CPQ Cloud when creating new quotes.  Do not check this box unless you are sure that the CPQ Cloud pricebooks have the correct partner pricebook ID values.</inlineHelpText>
    <label>Use Opportunity Pricebook</label>
    <type>Checkbox</type>
</CustomField>