force-app/main/default/objects/BigMachines__Commerce_Settings__c/fields/BigMachines__Width_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Width_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Pixel adjustment of Oracle CPQ Cloud iFrame size.</description>
    <inlineHelpText>Pixel adjustment of Oracle CPQ Cloud iFrame size.</inlineHelpText>
    <label>Width Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>